# Triple-A

./: .env.example  README.md  pyproject.toml
src/triple_a/: __init__.py  config.py  data_fetcher.py  gui.py  main.py  model.py  pipeline.py  telegram_bot.py
src/triple_a.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
