[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triple-a"
version = "0.1.0"
description = "Triple A (Active Asset Allocation) real-time quantitative trading framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6",
    "catboost",
    "python-telegram-bot[asyncio]",
    "websockets",
    "httpx",
    "pycryptodome",
    "numpy",
    "pandas",
    "python-dotenv",
]

[[project.authors]]
name = "Triple A Team"
